# openeo-processes-dask

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  PULL_REQUEST_INSTRUCTIONS.md  README.md  Spatial_filter.ipynb  demo_openeo_integration.py  example%20file.geoparquet  parcels.geojson  pyproject.toml  test_netherlands_demo.py  test_vectorcube_example.py
.devcontainer/: Dockerfile  Dockerfile.new  devcontainer.json  docker-compose.yml
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  ci-environment.yml  dependabot.yml
.github/workflows/: install-methods.yml  integration_test.yml  integration_tests.yml  main.yml  release.yml
OSCAR/: openeo_oscar.ipynb  openeo_oscar_dummy.ipynb
OSCAR/configs/: dummy.sh  dummy.yaml  oscar_hydromt_script.sh  oscar_hydromt_svc.yaml  oscar_wflow_script.sh  oscar_wflow_svc.yaml
benchmarks/: REPORT.MD  profiler.py  report_tests.ipynb
benchmarks/data/: fr_slo.geojson  sample2.geojson  sample_polygons.geojson
benchmarks/exactextract/: ee_big_sample.py  ee_fr_slo.py  ee_small_sample.py
benchmarks/xvec/: xvec_big_sample.py  xvec_fr_slo_sample.py  xvec_small_sample.py
docs/decisions/: README.md  handle-nodata-in-rastercubes.md
docs/scalability/: README.md  aggregate-large-spatial-extents.md
examples/: odc-stac_example.ipynb  stackstac_example.ipynb
examples/udf/: hillshade_real_data_validation.ipynb
openeo_processes_dask/: __init__.py  core.py  exceptions.py
openeo_processes_dask/process_implementations/: __init__.py  arrays.py  comparison.py  core.py  data_model.py  dates.py  ddmc.py  exceptions.py  inspect.py  logic.py  math.py  oscar.py  text.py  utils.py
openeo_processes_dask/process_implementations/cubes/: __init__.py  _filter.py  _xr_interop.py  aggregate.py  apply.py  apply_neighborhood.py  apply_neighborhood_intertwin.py  experimental.py  filter_bbox.py  general.py  geometries.py  indices.py  load.py  mask.py  mask_polygon.py  masks.py  merge.py  reduce.py  resample.py  utils.py
openeo_processes_dask/process_implementations/experimental/: __init__.py  ddmc.py  oscar.py  resample.py  rqadeforestation.py
openeo_processes_dask/process_implementations/external_processing/: oscar.py
openeo_processes_dask/process_implementations/ml/: __init__.py  curve_fitting.py  random_forest.py
openeo_processes_dask/process_implementations/udf/: __init__.py  dimension_helper.py  native_udf.py  udf.py
openeo_processes_dask/specs/: __init__.py
src/openeo_processes_dask/: main.py
tests/: __init__.py  conftest.py  dask_friendliness.py  fit_curve.ipynb  general_checks.py  mockdata.py  test.py  test_aggregate.py  test_apply.py  test_apply_neighborhood.py  test_apply_neighborhood_intertwin.py  test_array.py  test_arrays.py  test_comparison.py  test_core.py  test_curve.py  test_curve_fitting.py  test_dates.py  test_ddmc.py  test_dimensions.py  test_filter.py  test_geometries.py  test_indices.py  test_inspect.py  test_load_stac.py  test_logic.py  test_mask.py  test_math.py  test_merge.py  test_ml.py  test_native_udf_issue330.py  test_netherlands_demo.py  test_oscar.py  test_reduce.py  test_resample.py  test_specs.py  test_stac_dimension_policy.py  test_text.py  test_udf.py  test_xcube_eopf.py  (+1 more)
tests/data/s2_l2a_zarr_sample.zarr/: .zattrs  .zmetadata
tests/data/s2_l2a_zarr_sample.zarr/B02/: 0.0.0
tests/data/s2_l2a_zarr_sample.zarr/B03/: .zarray  0.0.0
tests/data/s2_l2a_zarr_sample.zarr/B04/: 0.0.0
tests/data/s2_l2a_zarr_sample.zarr/B08/: 0.0.0
tests/data/s2_l2a_zarr_sample.zarr/SCL/: .zattrs  0.0.0
tests/data/s2_l2a_zarr_sample.zarr/t/: .zarray  0
tests/data/s2_l2a_zarr_sample.zarr/x/: .zattrs  0
tests/data/s2_l2a_zarr_sample.zarr/y/: 0
tests/data/stac/: s2_l2a_test_item.json  s2_l2a_zarr_sample.json  s2_sample_dimension_policy_case_1.json  s2_sample_dimension_policy_case_2.json  s2_sample_dimension_policy_case_3.json
tests/data/stac/S2_L2A_sample.zarr/: .zmetadata
tests/data/stac/S2_L2A_sample.zarr/B02/: .zarray  0.0.0  0.0.1  0.1.0  0.1.1  0.2.0  0.2.1  0.3.0  0.3.1  1.0.0  1.0.1  1.1.0  1.1.1  1.2.0  1.2.1  1.3.0  1.3.1  2.0.0  2.0.1  2.1.0  2.1.1  2.2.0  2.2.1  2.3.0  2.3.1  3.0.0  3.0.1  3.1.0  3.1.1  3.2.0  3.2.1  3.3.0  3.3.1
tests/data/stac/S2_L2A_sample.zarr/B03/: 0.0.0  0.0.1  0.1.0  0.1.1  0.2.0  0.2.1  0.3.0  0.3.1  1.0.0  1.0.1  1.1.0  1.1.1  1.2.0  1.2.1  1.3.0  1.3.1  2.0.0  2.0.1  2.1.0  2.1.1  2.2.0  2.2.1  2.3.0  2.3.1  3.0.0  3.0.1  3.1.0  3.1.1  3.2.0  3.2.1  3.3.0  3.3.1
tests/data/stac/S2_L2A_sample.zarr/B04/: 0.0.0  0.0.1  0.1.0  0.1.1  0.2.0  0.2.1  0.3.0  0.3.1  1.0.0  1.0.1  1.1.0  1.1.1  1.2.0  1.2.1  1.3.0  1.3.1  2.0.0  2.0.1  2.1.0  2.1.1  2.2.0  2.2.1  2.3.0  2.3.1  3.0.0  3.0.1  3.1.0  3.1.1  3.2.0  3.2.1  3.3.0  3.3.1
tests/data/stac/S2_L2A_sample.zarr/B08/: 0.0.0  0.0.1  0.1.0  0.1.1  0.2.0  0.2.1  0.3.0  0.3.1  1.0.0  1.0.1  1.1.0  1.1.1  1.2.0  1.2.1  1.3.0  1.3.1  2.0.0  2.0.1  2.1.0  2.1.1  2.2.0  2.2.1  2.3.0  2.3.1  3.0.0  3.0.1  3.1.0  3.1.1  3.2.0  3.2.1  3.3.0  3.3.1
tests/data/stac/S2_L2A_sample.zarr/SCL/: 0.0.0  0.0.1  0.1.0  0.1.1  0.2.0  0.2.1  0.3.0  0.3.1  1.0.0  1.0.1  1.1.0  1.1.1  1.2.0  1.2.1  1.3.0  1.3.1  2.0.0  2.0.1  2.1.0  2.1.1  2.2.0  2.2.1  2.3.0  2.3.1  3.0.0  3.0.1  3.1.0  3.1.1  3.2.0  3.2.1  3.3.0  3.3.1
tests/data/stac/S2_L2A_sample.zarr/crs/: .zattrs
tests/data/stac/S2_L2A_sample.zarr/spatial_ref/: .zattrs
tests/data/stac/S2_L2A_sample.zarr/t/: .zattrs
tests/data/stac/S2_L2A_sample.zarr/x/: .zarray  0
tests/data/stac/S2_L2A_sample.zarr/y/: .zarray  .zattrs  0
