[tool.poetry]
name = "openeo-processes-dask"
version = "2023.1.1"
description = "Python implementations of many OpenEO processes, dask-friendly by default."
authors = ["Lukas Weidenholzer <lukas.weidenholzer@eodc.eu>", "Sean Hoyal <sean.hoyal@eodc.eu>", "Valentina Hutter <valentina.hutter@eodc.eu>"]
license = "Apache 2.0"
readme = "README.md"
repository = "https://github.com/Open-EO/openeo-processes-dask"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

packages = [
    { include = "openeo_processes_dask" }
]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
geopandas = ">=0.11.1,<1"
xarray = ">=2022.11.0"
dask = {extras = ["array"], version = ">=2022.11.1"}
rasterio = "^1.3.4"
dask-geopandas = ">=0.2.0,<1"
datacube = "^1.8.4"
xgboost = "^1.5.1"
rioxarray = ">=0.12.0,<1"
odc-algo = ">=0.2.3,<1"
openeo-pg-parser-networkx = ">=2023.1.0"
odc-geo = "^0.3.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
ipykernel = "^6.15.1"
matplotlib = "^3.5.3"
folium = ">=0.12.1,<1"
mapclassify = "^2.4.3"
bokeh = "<3"
pre-commit = "^2.20.0"
pytest-cov = "^4.0.0"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
