[project]
name = "openeo-processes-dask"
version = "2026.6.4"
description = "Python implementations of many OpenEO processes, dask-friendly by default."
authors = [
    {name = "Lukas Weidenholzer", email = "lukas.weidenholzer@eodc.eu"},
    {name = "Sean Hoyal", email = "sean.hoyal@eodc.eu"},
    {name = "Valentina Hutter", email = "valentina.hutter@eodc.eu"},
]
maintainers = [
    {name = "EODC Staff", email = "support@eodc.eu"},
]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/Open-EO/openeo-processes-dask"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
requires-python = ">=3.10,<3.15"
dependencies = [
    "geoparquet ==0.0.3",
    "numpy >=1.26.3,<3",
    "openeo >=0.36.0",
    "pyarrow >=15.0.2",
    "scipy >=1.11.3, <2",
]

[project.optional-dependencies]
deforestation = ["rqadeforestation >=0.1"]
implementations = [
    "dask[array, dataframe, distributed] >=2023.4.0",
    "dask-geopandas >=0.4.3",
    "gdal >=3.8.4",
    "geopandas >=0.11.1",
    "joblib >=1.3.2",
    "odc-geo >=0.4.1,<1",
    # odc-stac depends on odc-loader, but it's odc-loader that needs to be
    # compatible with the zarr package, so depend on odc-loader to get the right
    # version constraint for the zarr package.
    "odc-loader[zarr] >=0.5",
    "odc-stac >=0.3.9",
    "openeo-pg-parser-networkx >=2025.10",
    "planetary_computer >=0.5.1",
    "pystac >=1.12.0",
    "pystac_client>=0.6.1",
    "rasterio >=1.3.4",
    "rioxarray >=0.12.0,<1",
    "stac_validator >=3.3.1",
    "xarray >=2022.11.0",
    "xvec ==0.2.0",
]
ml = ["xgboost[dask] >=1.5.1"]


[dependency-groups]
# CI-only version ceilings: protect CI from upstream breakage without
# imposing ceilings on downstream consumers. See README for policy.
ci = [
    # This GDAL version and the version in .github/ci-environment.yml need
    # to agree.
    "gdal<3.13.2",
    # Zarr v3 compatibility for test_load_stac.py::test_load_stac.
    "xarray >=2025.06.0",
]
dev = [
    "folium >=0.12.1,<1",
    "ipykernel >=6.15.1",
    "mapclassify >=2.4.3, <3",
    "matplotlib >=3.5.3, <4",
    "pre-commit >=2.20.0, <3",
    "pytest >=9.0.3",
    "pytest-cov >=7.0.0",
]

[tool.poetry]
requires-poetry = ">=2.2"

[tool.pytest.ini_options]
console_output_style = "times"
testpaths = [
    "tests",
]

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"
